dark mode contrast issues fixed

--- a/css/index.css
+++ b/css/index.css
@@ -32,6 +32,10 @@ body.dark-mode .login-modal-content {
   color: #e8e8e8;
 }
 
+body.dark-mode .signup-button {
+  color: #111111;
+}
+
 body.dark-mode .navbar-items a,
 body.dark-mode .navbar-login,
 body.dark-mode .signup-button,
@@ -41,14 +45,14 @@ body.dark-mode .form-control {
   color: #e8e8e8;
 }
 
-body.dark-mode input,
-input:focus,
-textarea,
-select,
-select:focus,
-#task-description,
-#task-title,
-#task-schedule-input {
+body.dark-mode textarea,
+body.dark-mode select,
+body.dark-mode input:focus,
+body.dark-mode textarea:focus,
+body.dark-mode select:focus,
+body.dark-mode #task-description,
+body.dark-mode #task-title,
+body.dark-mode #task-schedule-input {
   background-color: #262635;
   border-color: #4b4b5c;
   color: #e8e8e8;
